crates/index-scheduler/src/scheduler/snapshots/index_scheduler__scheduler__test__settings_update-5.snap
---
source: crates/index-scheduler/src/scheduler/test.rs
expression: config.embedder_options
snapshot_kind: text
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 4,
    "url": "http://localhost:7777",
    "request": "{{text}}",
    "response": "{{embedding}}",
    "headers": {}
  }
}
