crates/index-scheduler/src/scheduler/snapshots/index_scheduler__scheduler__test__settings_update-7.snap
---
source: crates/index-scheduler/src/scheduler/test.rs
expression: config.embedder_options
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 4,
    "url": "http://localhost:7777",
    "request": "{{text}}",
    "search_fragments": {},
    "indexing_fragments": {},
    "response": "{{embedding}}",
    "headers": {}
  }
}
